--- a/mop/Pages/MenuSecondPage.xaml
+++ b/mop/Pages/MenuSecondPage.xaml
@@ -49,6 +49,25 @@
                         <GradientStop Color="#A3AEE6" Offset="1"/>
                     </LinearGradientBrush>
                 </Border.Background>
+                <Button Content="профиль"
+                        x:Name="profileBtn"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0" Click="profileBtn_Click" />
+            </Border>
+            <StackPanel x:Name="MngStP">
+                <Border CornerRadius="26" Width="200"
+                    Margin="0 10">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
                 <Button Content="бригады"
                         x:Name="brigadeBtn"
                         FontSize="40"
@@ -132,6 +151,26 @@
                         Foreground="White"
                         Background="Transparent"
                         BorderThickness="0" Click="addressesBtn_Click"/>
+            </Border>
+        </StackPanel>
+        <Border CornerRadius="26" Width="200"
+                    Margin="0 10"
+                    x:Name="requestBr">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="запросы"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        x:Name="requestBtn"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
             </Border>
         </StackPanel>
         <Image Source="/Images/Vector.png"
