--- a/mop/Pages/ClientsPage.xaml
+++ b/mop/Pages/ClientsPage.xaml
@@ -43,7 +43,7 @@
         </Image>
 
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="сотрудники" 
+            <TextBlock Text="клиенты" 
            FontSize="70" 
            Margin="0 0 0 15"
            FontWeight="Bold"
