--- a/mop/Pages/ProfilePage.xaml
+++ b/mop/Pages/ProfilePage.xaml
@@ -469,6 +469,26 @@
                     BorderThickness="0" 
                     x:Name="editBtn" Click="editBtn_Click"/>
         </Border>
+        <Border CornerRadius="26" Width="200"
+            Margin="0 10" Grid.Row="6" Grid.Column="2"
+                Height="40"
+            x:Name="requestBr">
+            <Border.Background>
+                <LinearGradientBrush>
+                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Button Content="мои запросы"
+                FontSize="27"
+                FontWeight="Bold"
+                Height="40"
+                x:Name="requestBtn"
+                Foreground="White"
+                Background="Transparent"
+                BorderThickness="0" Click="requestBtn_Click"/>
+        </Border>
 
     </Grid>
 </Page>
