--- a/mop/Pages/RequestsPage.xaml
+++ b/mop/Pages/RequestsPage.xaml
@@ -56,6 +56,165 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
+            <StackPanel x:Name="sortStP" Orientation="Horizontal"
+                        Margin="0 20" Width="1200">
+                <StackPanel Orientation="Horizontal" Margin="0 0 30 0">
+                    <TextBlock Text="фамилия: "
+                               FontWeight="Bold"
+                               FontSize="25">
+                        <TextBlock.Foreground>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </TextBlock.Foreground>
+                    </TextBlock>
+                    <Border BorderThickness="4"
+                            CornerRadius="26"
+                            Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                            Grid.Row="1" Grid.Column="1"
+                            Height="40" Width="170">
+                        <Border.BorderBrush>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.BorderBrush>
+                        <TextBox Background="Transparent"
+                                 FontSize="25" BorderThickness="0"
+                                 Height="40" BorderBrush="Transparent"
+                                 Padding="15 0 0 0"
+                                 x:Name="surnameTb" TextChanged="surnameTb_TextChanged">
+                            <TextBox.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </TextBox.Foreground>
+                        </TextBox>
+                    </Border>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 0 30 0">
+                    <TextBlock Text="дата запроса: "
+                               FontWeight="Bold"
+                               FontSize="25">
+                        <TextBlock.Foreground>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </TextBlock.Foreground>
+                    </TextBlock>
+                        <DatePicker x:Name="dateDp"
+                                    Width="125"
+                                    SelectedDateChanged="dateDp_SelectedDateChanged">
+                            <DatePicker.Foreground>
+                                    <LinearGradientBrush>
+                                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                                    </LinearGradientBrush>
+                            </DatePicker.Foreground>
+                        </DatePicker>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 0 30 0">
+                    <TextBlock Text="проверено: "
+                               FontWeight="Bold"
+                               FontSize="25">
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                    </TextBlock>
+                    <ComboBox Width="120"
+                              x:Name="checkingCb" SelectionChanged="checkingCb_SelectionChanged">
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="все варианты"/>
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="проверено"/>
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="не проверено"/>
+                        </ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 0 30 0">
+                    <TextBlock Text="заменено: "
+                               FontWeight="Bold"
+                               FontSize="25">
+                        <TextBlock.Foreground>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </TextBlock.Foreground> 
+                    </TextBlock>
+                    <ComboBox Width="120"
+                              x:Name="doneCb" SelectionChanged="doneCb_SelectionChanged">
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="все варианты"/>
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="изменено"/>
+                        </ComboBoxItem>
+                        <ComboBoxItem>
+                            <ComboBoxItem.Foreground>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ComboBoxItem.Foreground>
+                            <TextBlock Text="не изменено"/>
+                        </ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+            </StackPanel>
+            
             <ListView x:Name="requestsLv" 
                   Width="1200" Height="400"
                   FontSize="20"
@@ -198,7 +357,7 @@
                     BorderThickness="0" 
                     x:Name="checkedBtn" Click="checkedBtn_Click"/>
                 </Border>
-                <Border CornerRadius="40"
+                <!--<Border CornerRadius="40"
                 Width="80">
                     <Border.Background>
                         <LinearGradientBrush>
@@ -216,7 +375,7 @@
                         Background="Transparent"
                         BorderThickness="0" 
                         x:Name="doneBtn" Click="doneBtn_Click"/>
-                </Border>
+                </Border>-->
             </StackPanel>
         </StackPanel>
 
