--- a/mop/Windows/EmployeeAddWindow.xaml
+++ b/mop/Windows/EmployeeAddWindow.xaml
@@ -16,6 +16,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -31,7 +32,7 @@
                VerticalAlignment="Bottom"
                HorizontalAlignment="Left"
                RenderTransformOrigin="0.5,0.5" 
-               Grid.RowSpan="4" Grid.Row="4">
+               Grid.RowSpan="4" Grid.Row="5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -333,8 +334,9 @@
         </TextBlock>
         <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
                   Grid.Row="4" Grid.Column="1"
+                  x:Name="postsCb"
                   Width="250" Height="40" FontWeight="Bold"
-                  ItemsSource="{Binding posts}">
+                  ItemsSource="{Binding posts}" SelectionChanged="postsCb_SelectionChanged">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -365,6 +367,7 @@
         </TextBlock>
         <ComboBox Grid.RowSpan="1" Grid.ColumnSpan="2" 
                   Grid.Row="5" Grid.Column="1"
+                  x:Name="educCb"
                   Width="250" Height="40" FontWeight="Bold"
                   ItemsSource="{Binding educations}">
             <ComboBox.Foreground>
@@ -466,9 +469,44 @@
                 </TextBlock.Foreground>
             </TextBox>
         </Border>
+
+        <TextBlock Text="бригада" 
+                  FontSize="25" x:Name="brigadeTb"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" Visibility="Hidden"
+                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                   Grid.Row="6">
+            <TextBlock.Foreground>
+                <LinearGradientBrush>
+                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBlock.Foreground>
+        </TextBlock>
+        <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                  Grid.Row="6" Grid.Column="1"
+                  x:Name="brigadesCb" Visibility="Hidden"
+                  Width="250" Height="40" FontWeight="Bold"
+                  ItemsSource="{Binding brigades}">
+            <ComboBox.Foreground>
+                <LinearGradientBrush>
+                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                </LinearGradientBrush>
+            </ComboBox.Foreground>
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ID}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
         <Border CornerRadius="26" Height="35" Width="150"
                 Grid.Column="1"
-                Grid.Row="7">
+                Grid.Row="8">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
