--- a/mop/Pages/EditBrigade.xaml
+++ b/mop/Pages/EditBrigade.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="mop.Pages.BrigadesPage"
+﻿<Page x:Class="mop.Pages.EditBrigade"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:mop.Pages"
       mc:Ignorable="d" 
-     d:DesignHeight="1080" d:DesignWidth="1920"
-      Title="BrigadesPage">
+      d:DesignHeight="1080" d:DesignWidth="1920"
+      Title="EditBrigade">
 
-        <Grid Background="White">
+    <Grid Background="White">
 
         <Image Source="/Images/Vector.png"
                Width="800"
@@ -33,14 +33,14 @@
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" 
                     Margin="65,10,1015,602">
-                <Button.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </Button.Foreground>
-            </Button>
+            <Button.Foreground>
+                <LinearGradientBrush>
+                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
+        </Button>
 
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="бригады" 
@@ -121,7 +121,7 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            
+
                         </GridView.Columns>
                     </GridView>
                 </ListView.View>
@@ -191,7 +191,7 @@
         </StackPanel>
 
 
-        
+
 
     </Grid>
 </Page>
